test_case/rust-lang_rust/92386_1013507194_1.rs
rust
#![feature(generic_associated_types)]
#![deny(unused_lifetimes)]

pub trait Foo {
    type Message<'a>; //~ ERROR
}
